--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
     services:
       mongodb:
         image: mongo
-        port:
+        ports:
           - 27017:27017
         env:
           MONGO_INITDB_ROOT_USERNAME: root
